--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@
     margin-top: 40px;
     display: flex;
     flex-direction: column;
-    padding: 10px 10px;
+    padding: 10px 0;
 }
 
 .cont{
